[package]
name = "space_world"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.92"
diesel = { version = "2.2.4", features = ["postgres"] }
diesel-async = { version = "0.5.1", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
teloxide = "0.13.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
rand = "0.9.0-alpha.2"
